# mypy-to-codeclimate

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mypy_to_codeclimate/: __init__.py
tests/: tests.py
